attempt to fix line-wrapping of readline

--- a/public/public-Macaulay2/minimal.css
+++ b/public/public-Macaulay2/minimal.css
@@ -103,7 +103,7 @@
 /* from doc.css */
 table.examples {
      margin-left: 2em;
-     width: 25%;
+     width: 50%;
      border-style: solid;
 /*     background-color: #c0ffff;
      border-top-color: #c0ffff;
